--- a/404.html
+++ b/404.html
@@ -22,10 +22,7 @@ layout: default
   <script src="{{site_url}}/assets/js/sentry.js" charset="utf-8"></script>
   <script type="text/javascript">
     if(undefined !== Sentry){
-      Sentry.captureException({
-        'name':'Exception404',
-        'message':'404 error page',
-      });
+      Sentry.captureException(new Error('404 '+window.location.href), {level: 'warning'});
       console.log('404 sent to Sentry.io');
     }
   </script>
